charts/cert-manager/cert-manager.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/instance: cert-manager-rabbithouse
    app.kubernetes.io/managed-by: kubectl
