charts/cert-manager/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-manager-ingress
  namespace: cert-manager
spec:
  ingressClassName: traefik
  rules:
  - host: cert-manager.rabbithouse.adian.to
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cert-manager-webhook
            port:
              number: 443
